a few minor fixes to css to make it simpler to display on iphone and other devices, but also its now a bit cleaner for all browsers
git-svn-id: svn://svn.code.sf.net/p/opendb/code/opendb/trunk@955 2c52d18a-8f90-4aa0-bf14-52c5ce5e299b

--- a/theme/default/login.css
+++ b/theme/default/login.css
@@ -1,9 +1,6 @@
 #loginFormDiv {
 	margin: 0 auto;
-	width: 600px;
-	font-size: 200%;
-	padding: 20px; 
-	margin-top: 25px;
+	font-size: 130%;
 }
 
 h2 {
@@ -11,7 +8,7 @@ h2 {
 }
 
 #loginForm input.text, input.password, input.submit   {
-	font-size: 130%;
+	font-size: 110%;
 }
 
 #loginForm ul
